--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet"> 
@@ -47,7 +46,7 @@
                       <button class="buy-btn"><i class="fas fa-shopping-cart"></i> Buy Now</button>
                     </div>
                     <div class="col-md-5">
-                        <img src="image/meya.png" class="d-block w-100" alt="...">
+                        <img src="Image/my-logo.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
@@ -258,6 +257,5 @@
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-      <script src="js/bootstrap.min.js"></script>   
 </body>
 </html>
